# HW29

./: csv_convert_json.py  db.sqlite3  pyproject.toml
HW27/: settings.py  urls.py
ads/: admin.py  models.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py
ads/views/: ad.py  category.py  location.py  user.py
